--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -163,7 +163,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text=""
+        android:onClick="CMD_DEVICE_INFORMATION"
+        android:text="device info"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/consoleScroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button10"
